package com.fredrik.roombooking.validation;

public class PasswordConstraintValidator {

}
